@@ -1,4 +1,4 @@
-CHANGES.txt - 09/06/2000
+CHANGES.txt - 09/12/2000
 ------------------------
 
 CHANGES IN CUPS v1.1.3
@@ -101,6 +101,8 @@ CHANGES IN CUPS v1.1.3
 	  would stop processing.
 	- Added "debug2" log level to provide a little less
 	  verbose debugging information at the "debug" level.
+	- The scheduler would crash if you stopped a printer
+	  that was currently printing a job.
 
 
 CHANGES IN CUPS v1.1.2
